[project]
name = "agizz"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jonatas Oliveira", email = "contact@jonatasoliveira.dev" }
]
dependencies = [
    "gunicorn>=22.0.0",
    "fastapi>=0.111.0",
    "pytest>=8.2.2",
    "loguru>=0.7.2",
    "asyncpg>=0.29.0",
    "psycopg>=3.1.19",
    "dynaconf>=3.2.5",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.30.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "faker>=25.6.0",
    "isort>=5.13.2",
    "ruff>=0.4.8",
    "coverage>=7.5.3",
    "pytest>=8.2.2",
    "ipdb>=0.13.13",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "pytest-watch>=4.2.0",
    "pytest-ordering>=0.6",
    "pytest-asyncio>=0.23.7",
    "factory-boy>=3.3.0",
    "pytest-env>=1.1.3",
    "ruff-lsp>=0.0.53",
    "anyio>=4.4.0",
    "pyright>=1.1.366",
]

[tool.rye.scripts]
dev = 'uvicorn app.main:create_app --factory --host 0.0.0.0 --port 8000 --reload'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agizz"]
